[tool.poetry]
name = "runno-sandbox"
version = "0.1.0"
description = "Run untrusted code inside the Runno WebAssembly sandbox."
authors = ["Ben Taylor <me@taybenlor.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
